--- a/groupsite/index.html
+++ b/groupsite/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <link href="index.css" rel="stylesheet" />
     <script src="index.js"></script>
-    <title>NFT Marketplace</title>
+    <title>Brighton Bazaar</title>
 </head>
 
 <body>
@@ -55,8 +55,8 @@
         <div id="section2">
             <div id="sellers">
                 <div id="section2txtL">
-                    <h2><a href="/sell.html">For Artists</a></h2>
-                    <p>Sell your art amoung thousands of other artists</p>
+                    <h2><a href="/sell.html">For Students</a></h2>
+                    <p>Sell your stuff amoung thousands of other students</p>
                 </div>
 
                 <img id="nft1" src="./images/nfts/Comic book store by Mariel Rodriguez.jfif"
