--- a/groupsite/index.html
+++ b/groupsite/index.html
@@ -45,7 +45,7 @@
             <div id="logo+txt">
                 <img id="logo" src="./images/brighton bazaar.svg" alt="Italian Trulli">
                 <div id="textcontainer">
-                    <h1> Explore the city.</h1>
+                    <h1> Explore the marketplace.</h1>
                     <h2> Buy. Sell. Enjoy.</h2>
                 </div>
             </div>
