--- a/groupsite/index.html
+++ b/groupsite/index.html
@@ -22,7 +22,7 @@
                     <a class="active" href="#home">Home</a>
                     <a href="#buy">Buy</a>
                     <a href="#sell">Sell</a>
-                    <a href="#login">Log In</a>
+                    <a href="#login" id = "login">Log In</a>
                     <form id="form">
                         <input type="search" class="search" id="query" placeholder="Seach images....">
                         <button>
@@ -41,7 +41,6 @@
         <div id="loginsection">
 <div id="loginill">
     <img id="login" src="./images/13.svg" alt="man on laptop">
-
 </div>
             <div class="logincontainer">
                 <h2> Weclome back! Please Log In</h2>
