--- a/groupsite/index.html
+++ b/groupsite/index.html
@@ -80,6 +80,10 @@
                     <h2><a href="sell/sell.html">For Students</a></h2>
                     <p>Sell your stuff amoung thousands of other students</p>
                 </div>
+        </div>
+        </div>
+    
+               
 =======
         <h1 id="section3h1">Top Categories</h1>
 
