--- a/groupsite/index2.html
+++ b/groupsite/index2.html
@@ -21,6 +21,7 @@
 
                     <a class="active" href="#home">Home</a>
                     <a href="#buy">Buy</a>
+                     <a href="sell/sell.html">Sell</a>
                     <a href="index1.html">Log In 2</a>
                     <a href="#login" id="login">Log In</a>
                     <form id="form">
@@ -142,7 +143,7 @@
             <div id="section2">
                 <div id="sellers">
                     <div id="section2txtL">
-                        <h2><a href="/sell.html">For Students</a></h2>
+                        <h2><a href="sell/sell.html">For Students</a></h2>
                         <p>Sell your stuff amoung thousands of other students</p>
                     </div>
     
