--- a/groupsite/home.html
+++ b/groupsite/home.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="index2.css" rel="stylesheet" />
-    <script src="index2.js"></script>
+    <link href="home.css" rel="stylesheet" />
+    <script src="home.js"></script>
     <title>Brighton Bazaar</title>
 </head>
 
