--- a/groupsite/login.html
+++ b/groupsite/login.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="index1.css" rel="stylesheet" />
-    <script src="index.js"></script>
+    <link href="login.css" rel="stylesheet" />
+    <script src="login.js"></script>
     <title>Brighton Bazaar</title>
 </head>
 
