--- a/groupsite/login.html
+++ b/groupsite/login.html
@@ -19,9 +19,9 @@
 
                 <div class="navigation">
 
-                    <a href="index2.html">Home</a>
+                    <a href="home.html">Home</a>
                     <a href="#buy">Buy</a>
-                    <a href="index1.html">Log In 2</a>
+                    <a href="login.html">Log In 2</a>
                     <a class="active" href="#login" id="login">Log In</a>
                     <form id="form">
                         <input type="search" class="search" id="query" placeholder="Seach images....">
