--- a/groupsite/home.html
+++ b/groupsite/home.html
@@ -22,7 +22,7 @@
                     <a class="active" href="#home">Home</a>
                     <a href="#buy">Buy</a>
                      <a href="sell/sell.html">Sell</a>
-                    <a href="index1.html">Log In 2</a>
+                    <a href="login.html">Log In 2</a>
                     <a href="#login" id="login">Log In</a>
                     <form id="form">
                         <input type="search" class="search" id="query" placeholder="Seach images....">
