--- a/groupsite/sell/sell.html
+++ b/groupsite/sell/sell.html
@@ -24,7 +24,7 @@
 
                 <div class="navigation">
 
-                    <a href="../index.html">Home</a>
+                    <a href="../home.html">Home</a>
                     <a href="#buy">Buy</a>
                     <a class="active" href="sell.html">Sell</a>
                     <a href="#login" id="login">Log In</a>
