--- a/groupsite/home.html
+++ b/groupsite/home.html
@@ -22,8 +22,8 @@
                     <a class="active" href="#home">Home</a>
                     <a href="#buy">Buy</a>
                      <a href="sell/sell.html">Sell</a>
-                    <a href="login.html">Log In 2</a>
-                    <a href="#login" id="login">Log In</a>
+                    <a href="login.php">Log In</a>
+                    <a href="#signup" id="signup">Sign Up</a>
                     <form id="form">
                         <input type="search" class="search" id="query" placeholder="Seach images....">
                         <button>
@@ -38,7 +38,7 @@
             </div>
 
         </header>
-
+<div id="butter">
         <div id="loginsection">
             <button id="leavelogin">X</button>
 
@@ -73,6 +73,9 @@
             </div>
 
         </div>
+</div>
+    <div id="toast">
+
 
         <h1 id="section3h1">Top Categories</h1>
 
@@ -81,21 +84,19 @@
             <div id="b1">
                 <img id="pic" src="./images/undraw_educator_re_ju47.svg"
                     alt="image of a cartoon style NFT">
-                <h2>Teaching</h2>
+                <h2>Mathamatics</h2>
             </div>
 
             <div id="b2">
                 <img id="pic" src="./images/undraw_financial_data_re_p0fl.svg"
                     alt="image of a cartoon style NFT">
-                    <h2 style="
-                    display: flex;
-                ">Economics &amp; Finance</h2>
+                    <h2>Science</h2>
             </div>
 
             <div id="b3">
                 <img id="pic" src="./images/undraw_scientist_ft0o.svg"
                     alt="image of a cartoon style NFT">
-                    <h2>Science</h2>
+                    <h2>Social Sciences</h2>
 
 
             </div>
@@ -103,7 +104,7 @@
             <div id="b4">
                 <img id="pic" src="./images/undraw_learning_sketching_nd4f.svg"
                     alt="image of a cartoon style NFT">
-                    <h2>Art</h2>
+                    <h2>Humanities</h2>
 
 
             </div>
@@ -111,7 +112,7 @@
             <div id="b5">
                 <img id="pic" src="./images/undraw_landscape_photographer_qglf.svg"
                     alt="image of a cartoon style NFT">
-                    <h2>Photography</h2>
+                    <h2>Languages</h2>
 
 
             </div>
@@ -119,14 +120,14 @@
             <div id="b6">
                 <img id="pic" src="./images/undraw_writer_q06d.svg"
                     alt="image of a cartoon style NFT">
-                    <h2>English</h2>
+                    <h2>Computer Science</h2>
 
 
             </div>
-
         </div>
+</div>
 
-
+<div id="crumpet">
             <h1 id="section4h1">About Us</h1>
 
             <div id="section4">
@@ -139,6 +140,9 @@
         </article>
 
             </div>
+            </div>
+
+            <div id="tea">
 
             <div id="section2">
                 <div id="sellers">
@@ -160,6 +164,7 @@
                     </div>
                 </div>
     
+            </div>
             </div>
 
     </main>
