--- a/groupsite/home.html
+++ b/groupsite/home.html
@@ -22,8 +22,8 @@
                     <a class="active" href="#home">Home</a>
                     <a href="#buy">Buy</a>
                      <a href="sell/sell.html">Sell</a>
-                    <a href="login.php">Log In</a>
-                    <a href="#signup" id="signup">Sign Up</a>
+                    <a href="login.html">Log In 2</a>
+                    <a href="#login" id="login">Log In</a>
                     <form id="form">
                         <input type="search" class="search" id="query" placeholder="Seach images....">
                         <button>
@@ -38,7 +38,7 @@
             </div>
 
         </header>
-<div id="butter">
+
         <div id="loginsection">
             <button id="leavelogin">X</button>
 
@@ -73,9 +73,6 @@
             </div>
 
         </div>
-</div>
-    <div id="toast">
-
 
         <h1 id="section3h1">Top Categories</h1>
 
@@ -84,7 +81,7 @@
             <div id="b1">
                 <img id="pic" src="./images/undraw_educator_re_ju47.svg"
                     alt="image of a cartoon style NFT">
-                <h2>Mathamatics</h2>
+                <h2>Mathematics</h2>
             </div>
 
             <div id="b2">
@@ -124,10 +121,10 @@
 
 
             </div>
-        </div>
-</div>
 
-<div id="crumpet">
+        </div>
+
+
             <h1 id="section4h1">About Us</h1>
 
             <div id="section4">
@@ -140,9 +137,6 @@
         </article>
 
             </div>
-            </div>
-
-            <div id="tea">
 
             <div id="section2">
                 <div id="sellers">
@@ -165,14 +159,14 @@
                 </div>
     
             </div>
-            </div>
 
     </main>
     <footer>
-
+        <small>&copy; 2023, Brighton Bazaar. <a href="mailto:U.Moses-Taiga1@uni.brighton.ac.uk">Contact Us! </a>, Legal Stuff, About, Sustainability, News and Blog, Privacy, Support</small>
     </footer>
 
 </body>
 
 
 </html>
+
