--- a/groupsite/home.html
+++ b/groupsite/home.html
@@ -22,8 +22,8 @@
                     <a class="active" href="#home">Home</a>
                     <a href="#buy">Buy</a>
                      <a href="sell/sell.html">Sell</a>
-                    <a href="login.html">Log In 2</a>
-                    <a href="#login" id="login">Log In</a>
+                    <a href="login.php">Log In</a>
+                    <a href="#signup" id="signup">Sign Up</a>
                     <form id="form">
                         <input type="search" class="search" id="query" placeholder="Seach images....">
                         <button>
@@ -38,7 +38,7 @@
             </div>
 
         </header>
-
+<div id="butter">
         <div id="loginsection">
             <button id="leavelogin">X</button>
 
@@ -73,6 +73,9 @@
             </div>
 
         </div>
+</div>
+    <div id="toast">
+
 
         <h1 id="section3h1">Top Categories</h1>
 
@@ -81,7 +84,7 @@
             <div id="b1">
                 <img id="pic" src="./images/undraw_educator_re_ju47.svg"
                     alt="image of a cartoon style NFT">
-                <h2>Mathematics</h2>
+                <h2>Mathamatics</h2>
             </div>
 
             <div id="b2">
@@ -121,10 +124,10 @@
 
 
             </div>
-
         </div>
+</div>
 
-
+<div id="crumpet">
             <h1 id="section4h1">About Us</h1>
 
             <div id="section4">
@@ -137,6 +140,9 @@
         </article>
 
             </div>
+            </div>
+
+            <div id="tea">
 
             <div id="section2">
                 <div id="sellers">
@@ -159,6 +165,7 @@
                 </div>
     
             </div>
+            </div>
 
     </main>
     <footer>
@@ -169,4 +176,3 @@
 
 
 </html>
-
