--- a/groupsite/sell/sell.html
+++ b/groupsite/sell/sell.html
@@ -68,39 +68,27 @@
 <!--
         <div id="section1">
 
-            <div id="logo+txt">
-                <img id="logo" src="../images/brighton bazaar.svg" alt="Italian Trulli">
-                <div id="textcontainer">
-                    <h1> Explore the marketplace.</h1>
-                    <h2> Buy. Sell. Enjoy.</h2>
-                </div>
+            <div id="textcontainer_1">
+                <h1> Weclome! </h1>
+                <h2> Let's post an ad</h2>
             </div>
 
         </div>
-
-        <div id="section2">
-            <div id="sellers">
-                <div id="section2txtL">
-                    <h2><a href="sell.html">For Students</a></h2>
-                    <p>Sell your stuff amoung thousands of other students</p>
-                </div>
-
-                <img id="nft1" src="../images/nfts/Comic book store by Mariel Rodriguez.jfif"
-                    alt="image of a cartoon style NFT">
-            </div>
-
-            <div id="buyers">
-                <img id="nft2" src="../images/nfts/Gavin Parker - Art & Design.jfif" alt="image of a cartoon style NFT">
-                <div id="section2txtR">
-
-                    <h2><a href="/buy.html">For Buyers</a></h2>
-                    <p>Buy from our many vendors</p>
-                </div>
-            </div>
-
-        </div>
-
+    
     -->
+
+        <div id="section1">
+            <div id="ani_GIF">
+                    <img id="GIF_1" src="../images/GIF_1.gif"
+                    alt="an image for sell an item">   
+            </div>
+        </div>
+        <div id="textcontainer_1">
+            <h1> Weclome! </h1>
+            <h2> Let's post an ad</h2>
+        </div>
+
+    
 
 
 
