--- a/groupsite/sell/sell.html
+++ b/groupsite/sell/sell.html
@@ -25,7 +25,7 @@
                 <div class="navigation">
 
                     <a href="../home.html">Home</a>
-                    <a href="#buy">Buy</a>
+                    <a href="../buy.html">Buy</a>
                     <a class="active" href="sell.html">Sell</a>
                     <a href="#login" id="login">Log In</a>
                     <form id="form">
