--- a/groupsite/home.html
+++ b/groupsite/home.html
@@ -139,17 +139,16 @@
             <h3>Quick Links</h3>
             <ul>
               <li><a href="home.html">Home</a>
-              <li><a href="buy.html">Buy</a>
+              <li><a class="active" href="#buy">Buy</a>
               <li><a href="sell/sell.html">Sell</a>
               <li><a href="#">Contact Us</a></li>
             </ul>
           </div>
           <div class="column company-name">
             <h3>Brighton Bazaar</h3>
-            <p>1 Main St.</p>
-            <p>BN15PF Brighton</p>
-            <p>(01273) 12345678</p>
-            <p>brightonbazaar@gmail.com</p>
+            <p>123 Main St.</p>
+            <p>Brighton, MA 02135</p>
+            <p>(617) 555-1234</p>
           </div>
         </div>
       
