--- a/groupsite/buy.html
+++ b/groupsite/buy.html
@@ -83,10 +83,13 @@
         <div id="section3">
 
             <div id="b1">
-                <img id="pic" src="./images/davide-boscolo-gz9njd0zYbQ-unsplash3.jpg"
+                <a href="electronics.html">
+                    <img id="pic" src="./images/davide-boscolo-gz9njd0zYbQ-unsplash3.jpg" 
                     alt="category image">
+                </a>
                 <h2>Electronics</h2>
             </div>
+            
 
             <div id="b2">
                 <img id="pic" src="./images/hope-house-press-leather-diary-studio-IOzk8YKDhYg-unsplash3.jpg"
