Adding electronics items page
Creating item page for electronics category which displays different items of the same category

--- a/groupsite/electronics.html
+++ b/groupsite/electronics.html
@@ -79,23 +79,27 @@
     <h1 id="section3h1">Electronics</h1>
     <div id="section3">
       <div class="item">
-        <img src="./images/item1.jpg" alt="item image">
+        <img src="./images/dummy_600x400_ab96ab_f0e4f2_image.png" alt="item image">
         <h2>Item 1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit vulputate.</p>
         <p>Price: £10</p>
       </div>
       <div class="item">
-        <img src="./images/item2.jpg" alt="item image">
+        <img src="./images/dummy_600x400_ab96ab_f0e4f2_image.png" alt="item image">
         <h2>Item 2</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit vulputate.</p>
         <p>Price: £20</p>
       </div>
       <div class="item">
-        <img src="./images/item3.jpg" alt="item image">
+        <img src="./images/dummy_600x400_ab96ab_f0e4f2_image.png" alt="item image">
         <h2>Item 3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit vulputate.</p>
         <p>Price: £30</p>
       </div>
       <div class="item">
-        <img src="./images/item4.jpg" alt="item image">
+        <img src="./images/dummy_600x400_ab96ab_f0e4f2_image.png" alt="item image">
         <h2>Item 4</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit vulputate.</p>
         <p>Price: £40</p>
       </div>
     </div>
