--- a/groupsite/item.html
+++ b/groupsite/item.html
@@ -82,10 +82,11 @@
 
             <div id="section4">
                 <img id="pic3"
-                    src="./images/placeholder.jpg">
+                    src="./images/dummy_600x400_ab96ab_f0e4f2_image.png">
         <article>
 
             <h3>Item name</h3>
+            <h4>Price: £10</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur gravida arcu ac tortor dignissim convallis aenean.</p>
             <p> Mattis molestie a iaculis at erat pellentesque adipiscing. Amet dictum sit amet justo donec. Sed id semper risus in hendrerit gravida rutrum quisque non. Nibh mauris cursus mattis molestie a iaculis at erat pellentesque.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dictum fusce ut placerat orci nulla pellentesque dignissim. Vitae sapien pellentesque habitant morbi tristique senectus et netus. </p>
