--- a/groupsite/delivery_address.html
+++ b/groupsite/delivery_address.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link href="home.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="normalize.css" rel="stylesheet" />
     <link href="delivery_address.css" rel="stylesheet" />
     <script src="basket.js"></script>
     <title>Brighton Bazaar</title>
