--- a/groupsite/basket.html
+++ b/groupsite/basket.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="normalize.css" rel="stylesheet" />
     <link href="basket.css" rel="stylesheet" />
     <script src="basket.js"></script>
     <title>Brighton Bazaar</title>
