--- a/groupsite/basket.html
+++ b/groupsite/basket.html
@@ -94,7 +94,7 @@
       <tr>
         <td>
           <div class="basket-item">
-            <img src="./images/alexandra-gorn-WF0LSThlRmw-unsplash3.jpg" alt="Item 1">
+            <img src="./images/dummy_600x400_ab96ab_f0e4f2_image.png" alt="Item 1">
             <div class="item-details">
               <h3>Item 1</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -108,7 +108,7 @@
       <tr>
         <td>
           <div class="basket-item">
-            <img src="./images/davide-boscolo-gz9njd0zYbQ-unsplash1.jpg" alt="Item 2">
+            <img src="./images/dummy_600x400_ab96ab_f0e4f2_image.png" alt="Item 2">
             <div class="item-details">
               <h3>Item 2</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
