update the address in the footer

--- a/groupsite/electronics.html
+++ b/groupsite/electronics.html
@@ -199,9 +199,10 @@
           </div>
           <div class="column company-name">
             <h3>Brighton Bazaar</h3>
-            <p>123 Main St.</p>
-            <p>Brighton, MA 02135</p>
-            <p>(617) 555-1234</p>
+            <p>1 Main St.</p>
+            <p>BN15PF Brighton</p>
+            <p>(01273) 12345678</p>
+            <p>brightonbazaar@gmail.com</p>
           </div>
         </div>
       
