basket icon added to the navigation
basket icon added to the navigation

--- a/groupsite/electronics.html
+++ b/groupsite/electronics.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="css/normalize.css" rel="stylesheet">
       <link href="electronics.css" rel="stylesheet" />
+      <script src="home.js"></script>
       <script src="electronics.js"></script>
       <title>Brighton Bazaar</title>
    </head>
@@ -28,6 +29,17 @@
                         </svg>
                      </button>
                   </form>
+                  <a href="basket.html" id="cart">
+                     <img
+                       src="images/shopping_cart_black_24dp.svg"
+                       alt="Shopping Basket"
+                       width="24"
+                       height="24"
+                       id="cart-icon-black"
+                       style="display: none"
+                     />
+                     <span id="cart-count">0</span>
+                   </a>
                </div>
             </div>
          </header>
