--- a/groupsite/home.html
+++ b/groupsite/home.html
@@ -28,6 +28,17 @@
                         </svg>
                      </button>
                   </form>
+                  <a href="basket.html" id="cart">
+                     <img
+                       src="images/shopping_cart_black_24dp.svg"
+                       alt="Shopping Basket"
+                       width="24"
+                       height="24"
+                       id="cart-icon-black"
+                       style="display: none"
+                     />
+                     <span id="cart-count">0</span>
+                   </a>
                </div>
             </div>
          </header>
