--- a/groupsite/electronics.html
+++ b/groupsite/electronics.html
@@ -15,7 +15,7 @@
             <div class="topbar">
                <div class="navigation">
                   <a href="home.html">Home</a>
-                  <a class="active" href="#buy">Buy</a>
+                  <a href="buy.html">Buy</a>
                   <a href="sell/sell.html">Sell</a>
                   <a href="login.php">Log In</a>
                   <a href="#signup" id="signup">Sign Up</a>
