Implemented second navigation nav2
Implemented second navigation nav2

--- a/groupsite/basket.html
+++ b/groupsite/basket.html
@@ -48,6 +48,10 @@
             </a>
           </div>
         </div>
+      </div>
+      <div class="nav2">
+         <p><a href="electronics.html">Electronics</a> <a href="#">Basket</a></p>
+      </div>
       </header>
       <div id="butter">
         <div id="loginsection">
