--- a/groupsite/item.html
+++ b/groupsite/item.html
@@ -41,6 +41,9 @@
                    </a>
                </div>
             </div>
+            <div class="nav2">
+               <p><a href="electronics.html">Electronics</a> <a href="#">Item</a></p>
+            </div>
          </header>
          <div id="butter">
             <div id="loginsection">
