--- a/groupsite/electronics.html
+++ b/groupsite/electronics.html
@@ -40,6 +40,8 @@
                      />
                      <span id="cart-count">0</span>
                    </a>
+                   <span id="cart-count">0</span>
+                  </a>
                </div>
             </div>
          </header>
@@ -61,6 +63,7 @@
                </label>
             </div>
          </div>
+         
          <div id="section1">
          <div id="logo+txt">
             <img id="logo" src="./images/brighton bazaar.svg" alt="Italian Trulli">
