adjusting basket icon

--- a/groupsite/home.html
+++ b/groupsite/home.html
@@ -28,16 +28,13 @@
                         </svg>
                      </button>
                   </form>
-                  <a href="basket.html" id="cart">
+                  <a href="basket.html" id="shopping-basket">
                      <img
                        src="images/shopping_cart_black_24dp.svg"
                        alt="Shopping Basket"
-                       width="24"
-                       height="24"
-                       id="cart-icon-black"
-                       style="display: none"
+                       id="basket-icon-black"
                      />
-                     <span id="cart-count">0</span>
+                     <span id="basket-count">0</span>
                    </a>
                </div>
             </div>
