--- a/groupsite/basket.html
+++ b/groupsite/basket.html
@@ -6,7 +6,6 @@
     <link href="normalize.css" rel="stylesheet" />
     <link href="basket.css" rel="stylesheet" />
     <script src="home.js"></script>
-    <script src="basket.js"></script>
     <title>Brighton Bazaar</title>
   </head>
   <body>
@@ -14,7 +13,7 @@
       <header>
         <div class="topbar">
           <div class="navigation">
-            <a class="active" href="#home">Home</a>
+            <a href="home.html">Home</a>
             <a href="buy.html">Buy</a>
             <a href="sell/sell.html">Sell</a>
             <a href="login.php">Log In</a>
@@ -35,16 +34,13 @@
                 </svg>
               </button>
             </form>
-            <a href="basket.html" id="cart">
+            <a href="basket.html" id="shopping-basket">
               <img
                 src="images/shopping_cart_black_24dp.svg"
                 alt="Shopping Basket"
-                width="24"
-                height="24"
-                id="cart-icon-black"
-                style="display: none"
+                id="basket-icon-black"
               />
-              <span id="cart-count">0</span>
+              <span id="basket-count">0</span>
             </a>
           </div>
         </div>
