--- a/groupsite/electronics.html
+++ b/groupsite/electronics.html
@@ -6,7 +6,6 @@
       <link href="css/normalize.css" rel="stylesheet">
       <link href="electronics.css" rel="stylesheet" />
       <script src="home.js"></script>
-      <script src="electronics.js"></script>
       <title>Brighton Bazaar</title>
    </head>
    <body>
@@ -29,19 +28,14 @@
                         </svg>
                      </button>
                   </form>
-                  <a href="basket.html" id="cart">
+                  <a href="basket.html" id="shopping-basket">
                      <img
                        src="images/shopping_cart_black_24dp.svg"
                        alt="Shopping Basket"
-                       width="24"
-                       height="24"
-                       id="cart-icon-black"
-                       style="display: none"
+                       id="basket-icon-black"
                      />
-                     <span id="cart-count">0</span>
+                     <span id="basket-count">0</span>
                    </a>
-                   <span id="cart-count">0</span>
-                  </a>
                </div>
             </div>
          </header>
