--- a/groupsite/item.html
+++ b/groupsite/item.html
@@ -13,7 +13,7 @@
          <header>
             <div class="topbar">
                <div class="navigation">
-                  <a class="active" href="#home">Home</a>
+                  <a href="home.html">Home</a>
                   <a href="buy.html">Buy</a>
                   <a href="sell/sell.html">Sell</a>
                   <a href="login.php">Log In</a>
@@ -28,16 +28,13 @@
                         </svg>
                      </button>
                   </form>
-                  <a href="basket.html" id="cart">
+                  <a href="basket.html" id="shopping-basket">
                      <img
                        src="images/shopping_cart_black_24dp.svg"
                        alt="Shopping Basket"
-                       width="24"
-                       height="24"
-                       id="cart-icon-black"
-                       style="display: none"
+                       id="basket-icon-black"
                      />
-                     <span id="cart-count">0</span>
+                     <span id="basket-count">0</span>
                    </a>
                </div>
             </div>
