item page update
item page - added info about the seller

--- a/groupsite/item.html
+++ b/groupsite/item.html
@@ -77,12 +77,20 @@
                <img id="pic3"
                   src="./images/dummy_600x400_ab96ab_f0e4f2_image.png">
                <article>
-                  <h3>Item name</h3>
-                  <h4>Price: £10</h4>
+                  <h2>Price: £10</h2>
+                  <p>Condition: New</p>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur gravida arcu ac tortor dignissim convallis aenean.</p>
-                  <p> Mattis molestie a iaculis at erat pellentesque adipiscing. Amet dictum sit amet justo donec. Sed id semper risus in hendrerit gravida rutrum quisque non. Nibh mauris cursus mattis molestie a iaculis at erat pellentesque.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dictum fusce ut placerat orci nulla pellentesque dignissim. Vitae sapien pellentesque habitant morbi tristique senectus et netus. </p>
+                  <p> Mattis molestie a iaculis at erat pellentesque adipiscing. Sed id semper risus in hendrerit gravida rutrum quisque non. Nibh mauris cursus mattis molestie a iaculis at erat pellentesque.</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                   <a href="basket.html"><button>Add to Basket</button></a>    
+                  <h3>About the seller</h3>
+                  <h4>Seller's name</h4>
+                  <p>100% positive feedback</p>
+                  <h3>Reviews</h3
+                  <h4>Customer's name</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur gravida arcu ac tortor dignissim convallis aenean.</p>
+                  <h4>Customer's name</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur gravida arcu ac tortor dignissim convallis aenean.</p>
                </article>
             </div>
          </div>
