item page changes
item page changes

--- a/groupsite/item.html
+++ b/groupsite/item.html
@@ -83,17 +83,26 @@
                   <p> Mattis molestie a iaculis at erat pellentesque adipiscing. Sed id semper risus in hendrerit gravida rutrum quisque non. Nibh mauris cursus mattis molestie a iaculis at erat pellentesque.</p>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                   <a href="basket.html"><button>Add to Basket</button></a>    
-                  <h3>About the seller</h3>
-                  <h4>Seller's name</h4>
-                  <p>100% positive feedback</p>
-                  <h3>Reviews</h3
-                  <h4>Customer's name</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur gravida arcu ac tortor dignissim convallis aenean.</p>
-                  <h4>Customer's name</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur gravida arcu ac tortor dignissim convallis aenean.</p>
                </article>
             </div>
          </div>
+         <div class="seller-info">
+            <h2>About the seller</h2>
+            <h3 class="seller-name">Seller's name</h3>
+            <p class="feedback">100% positive feedback</p>
+            <h4>Reviews</h4>
+            <ul class="customer-reviews">
+              <li>
+                <h5 class="customer-name">Customer's name</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur gravida arcu ac tortor dignissim convallis aenean.</p>
+              </li>
+              <li>
+                <h5 class="customer-name">Customer's name</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur gravida arcu ac tortor dignissim convallis aenean.</p>
+              </li>
+            </ul>
+          </div>
+         
       </main>
       <footer>
          <div class="footer-container">
