update item page
update item page

--- a/groupsite/item.html
+++ b/groupsite/item.html
@@ -81,7 +81,7 @@
                   <p>Condition: New</p>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur gravida arcu ac tortor dignissim convallis aenean.</p>
                   <p> Mattis molestie a iaculis at erat pellentesque adipiscing. Sed id semper risus in hendrerit gravida rutrum quisque non. Nibh mauris cursus mattis molestie a iaculis at erat pellentesque.</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed id semper risus in hendrerit gravida rutrum quisque non. </p>
                   <a href="basket.html"><button>Add to Basket</button></a>    
                </article>
             </div>
@@ -92,7 +92,7 @@
               <img src="images/account_circle_black_24dp.svg" alt="account icon" class="seller-icon" />
               <h3 class="seller-name">Seller's name</h3>
             </div>
-            <p class="feedback">100% positive feedback</p>
+            <p class="feedback">100% positive feedback(<span class="star-rating">105</span> <img src="images/icons8-star-48.png" alt="star rating icon" class="star-icon">)</p>
             <h4>Reviews</h4>
             <ul class="customer-reviews">
               <li>
