--- a/groupsite/item.html
+++ b/groupsite/item.html
@@ -92,7 +92,7 @@
               <img src="images/account_circle_black_24dp.svg" alt="account icon" class="seller-icon" />
               <h3 class="seller-name">Seller's name</h3>
             </div>
-            <p class="feedback">100% positive feedback(<span class="star-rating">105</span> <img src="images/icons8-star-48.png" alt="star rating icon" class="star-icon">)</p>
+            <p class="feedback">100% positive feedback&nbsp;(&nbsp;<span class="star-rating">105</span>&nbsp;<img src="images/icons8-star-48.png" alt="star rating icon" class="star-icon">)&nbsp;</p>
             <h4>Reviews</h4>
             <ul class="customer-reviews">
               <li>
@@ -110,6 +110,14 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Curabitur gravida arcu ac tortor dignissim convallis aenean. Mattis molestie a iaculis at erat pellentesque adipiscing. Sed id semper risus in hendrerit gravida rutrum quisque non. Nibh mauris cursus mattis molestie a iaculis at erat pellentesque. Curabitur gravida arcu ac tortor dignissim convallis aenean.</p>
               </li>
             </ul>
+          </div>
+          <div class="contact-seller">
+            <h2>Contact Seller</h2>
+            <form>
+              <label for="message">Your message (max 100 words)</label>
+              <textarea id="message" name="seller-message" rows="4" cols="40" placeholder="Type your message here (max 100 words)"></textarea>
+              <button type="submit">Send message</button>
+            </form>
           </div>
           
           
