linking electronics heading

--- a/groupsite/buy.html
+++ b/groupsite/buy.html
@@ -99,7 +99,9 @@
                 alt="category image"
               />
             </a>
-            <h2>Electronics</h2>
+            <h2 class="electronics-heading">
+              <a href="electronics.html">Electronics</a>
+            </h2>
           </div>
           <div id="b2">
             <img
