styling buttons in the basket

--- a/groupsite/basket.html
+++ b/groupsite/basket.html
@@ -154,10 +154,10 @@
             <tr>
               <td colspan="4">
                 <button class="button-shopping">
-                  <a href="buy.html">Back to Shopping</a>
+                  <a href="buy.html">Continue Shopping</a>
                 </button>
                 <button class="button-delivery">
-                  <a href="delivery_address.html">Delivery Address</a>
+                  <a href="delivery_address.html">Checkout</a>
                 </button>
               </td>
             </tr>
