--- a/groupsite/electronics.html
+++ b/groupsite/electronics.html
@@ -129,13 +129,13 @@
             <h1 id="section3h1">Electronics</h1>
             <div id="section3">
                <div class="item">
-                  <a href="item.html">
-                     <img src="./images/dummy_600x400_ab96ab_f0e4f2_image.png" alt="item image">
-                     <h2>Item 1</h2>
-                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit vulputate.</p>
-                     <p>Price: £10</p>
+                  <a href="item.html" class="item-link">
+                    <img src="./images/dummy_600x400_ab96ab_f0e4f2_image.png" alt="item image">
+                    <h2>Item 1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit vulputate.</p>
+                    <p>Price: £10</p>
                   </a>
-               </div>
+                </div>
                <div class="item">
                   <img src="./images/dummy_600x400_ab96ab_f0e4f2_image.png" alt="item image">
                   <h2>Item 2</h2>
