--- a/groupsite/basket.html
+++ b/groupsite/basket.html
@@ -6,6 +6,7 @@
     <link href="normalize.css" rel="stylesheet" />
     <link href="basket.css" rel="stylesheet" />
     <script src="home.js"></script>
+    <script src="basket.js"></script>
     <title>Brighton Bazaar</title>
   </head>
   <body>
@@ -118,11 +119,11 @@
                   </div>
                 </div>
               </td>
-              <td>£12.99</td>
+              <td>£12.00</td>
               <td>
                 <input type="number" value="1" min="1" data-price="12.99" />
               </td>
-              <td class="item-subtotal">£12.99</td>
+              <td class="item-subtotal"></td>
             </tr>
             <tr>
               <td>
@@ -139,17 +140,17 @@
                   </div>
                 </div>
               </td>
-              <td>£21.99</td>
+              <td>£15.00</td>
               <td>
                 <input type="number" value="1" min="1" data-price="21.99" />
               </td>
-              <td class="item-subtotal">£21.99</td>
+              <td class="item-subtotal"></td>
             </tr>
           </tbody>
           <tfoot>
             <tr>
               <td colspan="3">Total</td>
-              <td class="basket-total">£0.00</td>
+              <td class="basket-total"></td>
             </tr>
             <tr>
               <td colspan="4">
