--- a/groupsite/electronics.html
+++ b/groupsite/electronics.html
@@ -96,16 +96,16 @@
                         <option value="acceptable">Acceptable</option>
                       </select>
                     </div>
-                  </div>
-                  <div class="searchcat">
                     <div class="form-group">
                       <label for="price-range">Price range:</label>
                       <input type="range" id="price-range" name="price-range" min="0" max="1000" class="form-range">
                       <div class="range-values">
-                        <span class="min-value">$0</span>
-                        <span class="max-value">$1000+</span>
+                        <span class="min-value">£0</span>
+                        <span class="max-value">£1000+</span>
                       </div>
                     </div>
+                  </div>
+                  <div class="searchcat">
                     <div class="form-group">
                       <label for="rating">Minimum rating:</label>
                       <input type="number" id="rating" name="rating" class="form-control" min="0" max="5" step="0.1">
@@ -119,11 +119,9 @@
                         <option value="highest-price">Highest price</option>
                       </select>
                     </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="searchcat">
-                    <button type="submit" class="btn btn-primary">Search</button>
+                    <div class="form-group">
+                      <button type="submit" class="btn btn-primary">Search</button>
+                    </div>
                   </div>
                 </div>
               </form>
