--- a/groupsite/home.html
+++ b/groupsite/home.html
@@ -117,6 +117,7 @@
                   <li><a href="home.html">Home</a>
                   <li><a href="buy.html">Buy</a>
                   <li><a href="sell/sell.html">Sell</a>
+                  <li><a href="terms.html">Terms</a>
                   <li><a href="#">Contact Us</a></li>
                </ul>
             </div>
